预约功能完善

--- a/coffee/project.config.json
+++ b/coffee/project.config.json
@@ -45,7 +45,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.14.4",
-  "appid": "wxe6bc6dfe141f96a6",
+  "appid": "wx2701f9c9bcd64c0e",
   "projectname": "coffee",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
