--- a/coffee/app.json
+++ b/coffee/app.json
@@ -1,5 +1,5 @@
 {
-  "pages":[
+  "pages": [
     "pages/shouye/shouye",
     "pages/index/index",
     "pages/login/login",
@@ -22,58 +22,59 @@
     "pages/yuyue/yuyue",
     "pages/tangshi/tangshi",
     "pages/mdlist/mdlist",
-    "pages/myload/myload",
-    "pages/goorder/goorder",
+    "pages/booking/booking",
     "pages/goorder1/goorder1",
     "pages/ziqu/ziqu",
     "pages/paihao/paihao",
-    "pages/waimai/waimai"
+    "pages/waimai/waimai",
+    "pages/myBookings/myBookings"
   ],
-  "permission":{
-    "scope.userLocation":{
-      "desc":"请点击确定"
+  "permission": {
+    "scope.userLocation": {
+      "desc": "请点击确定"
     }
   },
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTitleText": "餐厅预约点餐",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "selectedColor":"#1F1F1F",
-    "color":"#cfcfcf",
+    "selectedColor": "#1F1F1F",
+    "color": "#cfcfcf",
     "list": [
       {
         "pagePath": "pages/shouye/shouye",
         "iconPath": "images/icons/index.png",
         "selectedIconPath": "images/icons/index_color.png",
         "text": "首页"
-      }, 
-   {
-      "pagePath": "pages/index/index",
-      "iconPath": "images/icons/shop.png",
-      "selectedIconPath": "images/icons/shop_color.png",
-      "text": "商城"
-    }, 
-    {
-      "pagePath": "pages/fenlei/fenlei",
-      "iconPath": "images/icons/fenlei.png",
-      "selectedIconPath": "images/icons/fenlei_color.png",
-      "text": "菜品"
-    },
-    {
-      "pagePath": "pages/cart/cart",
-      "iconPath": "images/icons/cart.png",
-      "selectedIconPath": "images/icons/cart_color.png",
-      "text": "购物车"
-    },
-     {
-      "pagePath": "pages/my/my",
-      "iconPath": "images/icons/my.png",
-      "selectedIconPath": "images/icons/my_color.png",
-      "text": "我的"
-    }]
+      },
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "images/icons/shop.png",
+        "selectedIconPath": "images/icons/shop_color.png",
+        "text": "商城"
+      },
+      {
+        "pagePath": "pages/fenlei/fenlei",
+        "iconPath": "images/icons/fenlei.png",
+        "selectedIconPath": "images/icons/fenlei_color.png",
+        "text": "菜品"
+      },
+      {
+        "pagePath": "pages/cart/cart",
+        "iconPath": "images/icons/cart.png",
+        "selectedIconPath": "images/icons/cart_color.png",
+        "text": "购物车"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "iconPath": "images/icons/my.png",
+        "selectedIconPath": "images/icons/my_color.png",
+        "text": "我的"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
